[package]
name = "rusb2snes"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ChTBoner/rusb2snes"
repository = "https://github.com/ChTBoner/rusb2snes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.24"
tungstenite = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"