[package]
name = "rusb2snes"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/ChTBoner/rusb2snes"
repository = "https://github.com/ChTBoner/rusb2snes"
license-file = "LICENSE"
description = "A simple library to interact with QUsb2Snes or SNI"

[dependencies]
strum_macros = "0.24"
tungstenite = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"