[package]
name = "rusb2snes"
version = "0.1.4"
edition = "2021"
homepage = "https://github.com/ChTBoner/rusb2snes"
repository = "https://github.com/ChTBoner/rusb2snes"
license-file = "LICENSE"
description = "A simple library to interact with QUsb2Snes or SNI"
readme = "README.md"

[dependencies]
strum_macros = "0.25"
tungstenite = "0.20.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"